caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_type_paren.caffeine
Blueprints
  "test":
    Requiring { field: List(String }
    Provides { value: "x" }
